--- a/holamundo.html
+++ b/holamundo.html
@@ -3,12 +3,7 @@
         <title>Hola mundo</title>
     </head>
     <body>
-<<<<<<< HEAD
-        <h1>Adiós mundo cruel...</h1>
-=======
-        <h1>Adios mundo cruel/h1>
-	<h2> Era broma... ¡¡¡mucho mejor hola mundo!!!</h2>
-	<p><b> Yo soy Paquito</b></p>
->>>>>>> listado
+        <h1>Hola mundo de nuevo...</h1>
+	<h2> Hoy es un buen día para aprender Git</h2>
     </body>
 </html>
